# circuijts

./: Makefile  README.md  detect_shorts.py  generate_ssm.py  lib.py  pyproject.toml  requirements.txt  spec.md  test.py
.github/workflows/: ci.yml
circuijt/: analysis.py  ast_converter.py  ast_utils.py  components.py  graph_utils.py  parser.py  validator.py
circuits/: amp1.circuijt  diffpair1.circuijt  ssm1.circuijt
tests/: conftest.py  test_ast.py  test_ast_converter.py  test_circuit.py  test_graph.py  test_parser.py  test_reconstruction_arity.py
