[project]
name = "circuijts"
version = "0.0.1"
description = "Circuit description language parser and validator"
authors = []
readme = "README.md"

[build-system]
requires = ["hatchling", "pytest-cov"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["circuijt"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.coverage.run]
source = ["circuijt"]