[project]
name = "circuijts"
version = "0.0.1"
description = "Circuit description language parser and validator"
authors = []
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0"
]

[build-system]
requires = ["hatchling", "pytest-cov"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["circuijt"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 127
target-version = ["py38"]

[tool.flake8]
max-line-length = 127
max-complexity = 10
ignore = "E203,E266,E501,W503"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info"
]

[tool.coverage.run]
source = ["circuijt"]